k8s/manifests/ingress.yaml
# ingress for application
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minimal-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: go-web-apps.local
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: go-web-apps
            port:
              number: 80
